--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-query": "^3.3.5",
     "react-scripts": "^2.1.8",
     "tachyons": "^4.12.0"
   },
